<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_between_title_and_body_text"
            android:layout_marginLeft="@dimen/padding_around_content_area"
            android:layout_marginRight="@dimen/padding_around_content_area"
            android:layout_marginTop="@dimen/padding_around_content_area"
            android:text="@string/title_dialog_point"
            android:textSize="@dimen/text_size_large20" />

        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_around_content_area"
            android:layout_marginLeft="@dimen/padding_around_content_area"
            android:layout_marginRight="@dimen/padding_around_content_area"
            android:text="@string/content_dialog_point"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_area_height"
        android:gravity="right" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/padding_around_buttons"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/color_button_dialog"
            android:textSize="@dimen/text_size_large18" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/padding_around_buttons"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/btn_confirm"
            android:textColor="@color/color_button_dialog"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>